feat: fixed docker networks and minor adjusments
