# api-service/swagger.yaml
@@ -5,6 +5,41 @@ components:
     requestBodies: {}
     responses: {}
     schemas:
+        Stock:
+            properties:
+                name:
+                    type: string
+                symbol:
+                    type: string
+                open:
+                    type: number
+                    format: double
+                high:
+                    type: number
+                    format: double
+                low:
+                    type: number
+                    format: double
+                close:
+                    type: number
+                    format: double
+            required:
+                - name
+                - symbol
+                - open
+                - high
+                - low
+                - close
+            type: object
+            additionalProperties: false
+        ErrorResult:
+            properties:
+                message:
+                    type: string
+            required:
+                - message
+            type: object
+            additionalProperties: false
         RegisterUserResponse:
             properties:
                 token:
@@ -14,14 +49,6 @@ components:
             required:
                 - token
                 - email
-            type: object
-            additionalProperties: false
-        ErrorResult:
-            properties:
-                message:
-                    type: string
-            required:
-                - message
             type: object
             additionalProperties: false
         RoleEnum:
@@ -36,6 +63,47 @@ info:
     contact: {}
 openapi: 3.0.0
 paths:
+    /v1/stock:
+        get:
+            operationId: GetStock
+            responses:
+                '200':
+                    description: Ok
+                    content:
+                        application/json:
+                            schema:
+                                anyOf:
+                                    - {items: {$ref: '#/components/schemas/Stock'}, type: array}
+                                    - {$ref: '#/components/schemas/ErrorResult'}
+                '400':
+                    description: ""
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ErrorResult'
+                '404':
+                    description: ""
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ErrorResult'
+                '500':
+                    description: ""
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ErrorResult'
+            description: 'Retrivies an array of stock information.'
+            tags:
+                - Stocks
+            security: []
+            parameters:
+                -
+                    in: query
+                    name: stockCode
+                    required: true
+                    schema:
+                        type: string
     /v1/register:
         post:
             operationId: Register
